Fix mobile header alignment

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -35,3 +35,7 @@
     margin-bottom: 50px;
   }
 }
+
+.content p {
+  text-align: justify;
+}
