--- a/assets/css/hyde.css
+++ b/assets/css/hyde.css
@@ -120,7 +120,6 @@ a.sidebar-nav-item:focus {
 .content {
   padding-top:    4rem;
   padding-bottom: 4rem;
-  text-align: justify;
 }
 
 @media (min-width: 48em) {
